@@ -1,5 +1,11 @@
 2009-08-27	The InnoDB Team
 
+	* dict/dict0dict.c, include/dict0dict.h,
+	mysql-test/innodb_bug44571.result, mysql-test/innodb_bug44571.test:
+	Fix Bug#44571 InnoDB Plugin crashes on ADD INDEX
+
+2009-08-27	The InnoDB Team
+
 	* row/row0merge.c:
 	Fix a bug in the merge sort that can corrupt indexes in fast index
 	creation.  Add some consistency checks.  Check that the number of
